dev/sass/_device_iphone_5.scss
$width_device_iphone_5_max: 378;
$height_device_iphone_5_max: 786;

$width_device_iphone_4_max: 378;
$height_device_iphone_4_max: 698;

.device-iphone-5 {
	background: #fff;
	border-top-left-radius: percentage( 55 / $width_device_iphone_5_max ) percentage( 55 / $height_device_iphone_5_max );
	border-top-right-radius: percentage( 55 / $width_device_iphone_5_max ) percentage( 55 / $height_device_iphone_5_max );
	border-bottom-left-radius: percentage( 55 / $width_device_iphone_5_max ) percentage( 55 / $height_device_iphone_5_max );
	border-bottom-right-radius: percentage( 55 / $width_device_iphone_5_max ) percentage( 55 / $height_device_iphone_5_max );
	box-sizing: border-box;
	margin: 0;
	position: relative;
	width: 32vw;
	max-width: 372px;
	figure {
		height: 0;
		padding-bottom: percentage( 568 / 320 );
		position: relative;
		width: 100%;
		max-width: 320px;
	}
	.device-screen {
		padding: percentage( 110 / $width_device_iphone_5_max ) percentage( 26 / $width_device_iphone_5_max );
	}
	.img-wrap {
		position: absolute;
		left: 0;
		top: 0;
		bottom: 0;
		width: 100%;
	}
	img {
		display: block;
		width: 100%;
		max-width: 320px;
		position: relative;
		z-index: 0;
	}
	&:before, &:after {
		content: '';
		display: block;
		position: absolute;
	}
	&:before { // Speaker
		background: #efefef;
		border-radius: 999px;
		width: percentage( 60 / $width_device_iphone_5_max );
		height: percentage( 8 / $height_device_iphone_5_max );
		top: percentage( 58 / $height_device_iphone_5_max );
		left: 50%;
		margin-left: percentage( -30 / $width_device_iphone_5_max );
	}
	&:after { // Home button
		border-color: #efefef;
		border-style: solid;
		border-width: 2px;
		border-radius: 50%;
		bottom: percentage( 24 / $height_device_iphone_5_max );
		left: 50%;
		margin-left: percentage( -31 / $width_device_iphone_5_max );
		width: percentage( 62 / $width_device_iphone_5_max );
		height: percentage( 62 / $height_device_iphone_5_max );
		@include vw-min-max( 'border-width', 1, 3, $content_max_width );
	}
	.project-phone-black & {
		background: $black;
		&:before {
			background: rgba( 255, 255, 255, .05 );
		}
		&:after {
			border-color: rgba( 255, 255, 255, .05 );
		}
	}
}

// Todo: Merge with iphone 5
.device-iphone-4 {
	background: #fff;
	border-top-left-radius: percentage( 55 / $width_device_iphone_4_max ) percentage( 55 / $height_device_iphone_4_max );
	border-top-right-radius: percentage( 55 / $width_device_iphone_4_max ) percentage( 55 / $height_device_iphone_4_max );
	border-bottom-left-radius: percentage( 55 / $width_device_iphone_4_max ) percentage( 55 / $height_device_iphone_4_max );
	border-bottom-right-radius: percentage( 55 / $width_device_iphone_4_max ) percentage( 55 / $height_device_iphone_4_max );
	box-sizing: border-box;
	margin: 0;
	position: relative;
	width: 32vw;
	max-width: 372px;
	figure {
		height: 0;
		padding-bottom: percentage( 480 / 320 );
		position: relative;
		width: 100%;
		max-width: 320px;
	}
	.device-screen {
		padding: percentage( 110 / $width_device_iphone_4_max ) percentage( 26 / $width_device_iphone_4_max );
	}
	.img-wrap {
		position: absolute;
		left: 0;
		top: 0;
		bottom: 0;
		width: 100%;
	}
	img {
		display: block;
		width: 100%;
		max-width: 320px;
	}
	&:before, &:after {
		content: '';
		display: block;
		position: absolute;
	}
	&:before { // Speaker
		background: #efefef;
		border-radius: 999px;
		width: percentage( 60 / $width_device_iphone_4_max );
		height: percentage( 8 / $height_device_iphone_4_max );
		top: percentage( 58 / $height_device_iphone_4_max );
		left: 50%;
		margin-left: percentage( -30 / $width_device_iphone_4_max );
	}
	&:after { // Home button
		border-color: #efefef;
		border-style: solid;
		border-width: 2px;
		border-radius: 50%;
		bottom: percentage( 24 / $height_device_iphone_4_max );
		left: 50%;
		margin-left: percentage( -31 / $width_device_iphone_4_max );
		width: percentage( 62 / $width_device_iphone_4_max );
		height: percentage( 62 / $height_device_iphone_4_max );
		@include vw-min-max( 'border-width', 1, 3, $content_max_width );
	}
	.project-phone-black & {
		background: $black;
		&:before {
			background: rgba( 255, 255, 255, .05 );
		}
		&:after {
			border-color: rgba( 255, 255, 255, .05 );
		}
	}
}

